# rslam

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/depth-estimate/: .gitignore  Cargo.toml  build.rs  vcpkg.json
crates/depth-estimate/examples/: simple.rs
crates/depth-estimate/src/: lib.rs
crates/depth-estimate/src/midas/: transforms.rs
crates/r-slam-common/: Cargo.toml
crates/r-slam-common/src/: backprojection.rs  lib.rs
crates/slam-camera/: Cargo.toml
crates/slam-camera/src/: lib.rs
crates/slam-devices/: Cargo.toml
crates/slam-devices/examples/: simple.rs
crates/slam-devices/src/: lib.rs  ui.rs
crates/slam-ui/: Cargo.toml
crates/slam-ui/src/: lib.rs
crates/visual-odometry/: .gitignore  Cargo.toml
crates/visual-odometry/examples/: simple.rs
crates/visual-odometry/src/: camera.rs  frame.rs  lib.rs
